syntax = "proto3";

option csharp_namespace = "ClockInOut.Protos.User";

package user.v1;

service gRPCService {
  rpc CheckUserExists (UserExistsRequest) returns (UserExistsResponse);
}

message UserExistsRequest {
  int32 user_id = 1;
}

message UserExistsResponse {
  bool exists = 1;
}